k8s/order-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: order:latest
          imagePullPolicy: IfNotPresent
          command: ["granian"]
          args: ["--interface", "asgi", "--host", "0.0.0.0", "--port", "5000", "--workers", "2", "--loop", "uvloop", "app:app"]
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: 256Mi
              cpu: 500m
            limits:
              memory: 512Mi
              cpu: 3000m
          startupProbe:
            httpGet:
              path: /health
              port: 5000
            failureThreshold: 12
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            periodSeconds: 10
